# server_client_tcp_in_python

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-quality.yml  tests.yml
client/: client.py
server/: server.py
tests/: manual_test.md  test_server.py
