[project]
name = "server-client-tcp-in-python"
version = "0.1.0"
description = "Server and client TCP in Python"
authors = [
    {name = "Jose Martin Rangel Espinoza",email = "jrangelespinoza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
packages = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
bandit = "^1.8.3"
pytest = "^8.3.5"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
